# skillfile

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Skillfile  clippy.toml  deny.toml  flake.nix  install.sh  pyproject.toml  skillfile.py
.cargo/: config.toml
.github/workflows/: bump.yml  ci.yml  fuzz.yml  nightly.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  main.rs  patch.rs  update_check.rs
crates/cli/src/commands/: add.rs  add_tui.rs  diff.rs  format.rs  init.rs  installed_variants.rs  mod.rs  multi_target.rs  pin.rs  remove.rs  resolve.rs  search.rs  search_tui.rs  skill_preview.rs  sort.rs  status.rs  validate.rs
crates/cli/tests/: cli.rs  functional.rs  init.rs  install.rs  scaffold.rs  unpin_resolve.rs
crates/core/: Cargo.toml
crates/core/src/: conflict.rs  error.rs  lib.rs  lock.rs  models.rs  output.rs  parser.rs  patch.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: adapter.rs  install.rs  lib.rs  paths.rs
crates/deploy/tests/: install_deploy_all.rs
crates/sources/: Cargo.toml
crates/sources/src/: http.rs  lib.rs  resolver.rs  strategy.rs  sync.rs
crates/sources/src/registry/: agentskill.rs  mod.rs  scrape.rs  skillhub.rs  skillssh.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_manifest.rs
skillfile/: _scripts.py  add.py  cli.py  diff.py  exceptions.py  init.py  install.py  lock.py  models.py  parser.py  patch.py  pin.py  remove.py  resolve.py  resolver.py  sort.py  status.py  strategies.py  sync.py  validate.py
skillfile/commands/: __init__.py  add.py  init.py  remove.py  sort.py  status.py  validate.py
skillfile/core/: __init__.py  conflict.py  lock.py  models.py  parser.py
skillfile/deploy/: __init__.py  adapter.py  install.py  paths.py
skillfile/patch/: __init__.py  diff.py  patch.py  pin.py  resolve.py
skillfile/sources/: __init__.py  resolver.py  strategies.py  sync.py
tests/: Cargo.toml  cli.rs  functional.rs  helpers.py  interactive.rs  test_add.py  test_conflict.py  test_conflict_e2e.py  test_diff.py  test_init.py  test_install.py  test_lock.py  test_parser.py  test_patch.py  test_pin.py  test_remove.py  test_resolve.py  test_resolver.py  test_sort.py  test_status.py  test_sync.py  test_validate.py  upstream.rs
tests/functional/: conftest.py  test_add_remove.py  test_install.py  test_install_dry_run.py  test_install_update.py  test_pin_unpin.py  test_sort.py  test_status.py  test_sync.py  test_validate.py
tests/integration/commands/: test_add.py  test_init.py  test_remove.py  test_status.py
tests/integration/deploy/: test_conflict_e2e.py  test_install.py
tests/integration/patch/: test_diff.py  test_pin.py  test_resolve.py
tests/integration/sources/: test_sync.py
tests/src/: lib.rs
tests/unit/: test_cli.py
tests/unit/commands/: test_sort.py  test_validate.py
tests/unit/core/: test_conflict.py  test_lock.py  test_models.py  test_parser.py
tests/unit/deploy/: test_adapter.py  test_install.py  test_paths.py
tests/unit/patch/: test_patch.py
tests/unit/sources/: test_resolver.py  test_strategies.py
