[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Internal crates
skillfile-core = { path = "crates/core" }
skillfile-sources = { path = "crates/sources" }
skillfile-deploy = { path = "crates/deploy" }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (blocking — skillfile is not a server)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"

# Diff/patch
similar = "2"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
