[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/eljulians/skillfile"
homepage = "https://github.com/eljulians/skillfile"
keywords = ["ai", "ai-agents", "claude-code", "package-manager", "dotfiles"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
skillfile-core = { path = "crates/core", version = "1.0.0" }
skillfile-sources = { path = "crates/sources", version = "1.0.0" }
skillfile-deploy = { path = "crates/deploy", version = "1.0.0" }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (blocking — skillfile is not a server)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"

# Version comparison
semver = "1"

# Diff/patch
similar = "2"

# Interactive prompts
inquire = "0.9"
cliclack = "0.4"
console = "0.16"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
