[workspace]
members = ["crates/*", "tests"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/eljulians/skillfile"
homepage = "https://github.com/eljulians/skillfile"
keywords = ["ai", "ai-agents", "claude-code", "package-manager", "dotfiles"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
skillfile-core = { path = "crates/core", version = "1.0.0" }
skillfile-sources = { path = "crates/sources", version = "1.0.0" }
skillfile-deploy = { path = "crates/deploy", version = "1.0.0" }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }

# HTTP (blocking — skillfile is not a server)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"

# Version comparison
semver = "1"

# Diff/patch
similar = "2"

# Interactive prompts
inquire = "0.9"
cliclack = "0.4"
console = "0.16"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
retry = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# ── Enable pedantic group, then override what we disagree with ───
pedantic = { level = "warn", priority = -1 }

# ── Noisy pedantic lints we opt out of ───────────────────────────
missing_errors_doc = "allow"          # CLI tool, not a public library
missing_panics_doc = "allow"          # same
doc_markdown = "allow"                # backtick enforcement is busywork here
must_use_candidate = "allow"          # noisy for a CLI
module_name_repetitions = "allow"     # e.g. SkillfileError in skillfile_core
return_self_not_must_use = "allow"    # builders don't need #[must_use]
struct_excessive_bools = "allow"      # covered by fn_params_excessive_bools

# ── Complexity gates (deny = fail CI on regression) ──────────────
cognitive_complexity = "deny"
too_many_lines = "deny"
excessive_nesting = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
many_single_char_names = "deny"
fn_params_excessive_bools = "deny"

# ── Pedantic lints promoted to deny ──────────────────────────────
redundant_closure_for_method_calls = "deny"
manual_let_else = "deny"
implicit_clone = "deny"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "deny"
map_unwrap_or = "deny"
unnested_or_patterns = "deny"
manual_string_new = "deny"

# ── Restriction lints (opt-in, high signal) ──────────────────────
empty_structs_with_brackets = "deny"  # use `struct Foo;` not `struct Foo {}`
rest_pat_in_fully_bound_structs = "deny" # don't `..` when all fields are bound
format_push_string = "deny"           # use write!() instead of push_str(&format!())
needless_raw_strings = "deny"         # don't use r"" when no escapes needed
verbose_file_reads = "deny"           # use fs::read_to_string not open+read
string_lit_chars_any = "deny"         # use .contains('x') not .chars().any(|c| c == 'x')

# ── Aspirational (enable after cleanup sprint) ───────────────────
# str_to_string = "deny"             # 266 hits: .to_string() on &str -> .to_owned()
# redundant_clone = "deny"           # 5 hits in tests (nursery, may false-positive)
# option_if_let_else = "deny"        # 12 hits: if-let -> map_or/map_or_else

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
