[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillfile"
version = "0.4.0"
description = "Tool-agnostic AI skill & agent manager"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skillfile = "skillfile.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
