[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillfile"
version = "0.6.0"
description = "Tool-agnostic AI skill & agent manager"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skillfile = "skillfile.cli:main"
test-unit = "skillfile._scripts:test_unit"
test-integration = "skillfile._scripts:test_integration"
test-functional = "skillfile._scripts:test_functional"
test-all = "skillfile._scripts:test_all"

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
    "ipdb>=0.13.13",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["skillfile"]
omit = [
    "skillfile/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
