[package]
name = "skillfile-functional-tests"
version = "0.0.0"
edition.workspace = true
publish = false

[[test]]
name = "cli"
path = "cli.rs"

[[test]]
name = "upstream"
path = "upstream.rs"

[dependencies]
assert_cmd = { workspace = true }

[dev-dependencies]
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
skillfile-sources = { workspace = true }
retry = { workspace = true }

[lints]
workspace = true
