[package]
name = "skillfile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tool-agnostic AI skill & agent manager - the Brewfile for your AI tooling"
readme = "../../README.md"

[[bin]]
name = "skillfile"
path = "src/main.rs"

[dependencies]
skillfile-core = { workspace = true }
skillfile-sources = { workspace = true }
skillfile-deploy = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
ureq = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
inquire = { workspace = true }
cliclack = { workspace = true }
console = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
skillfile-core = { workspace = true }
tempfile = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-arch }-{ target-os }{ binary-ext }"
pkg-fmt = "bin"

[lints]
workspace = true
