[package]
name = "skillfile-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain logic for skillfile: models, parser, lock, conflict, patch"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
