[package]
name = "skillfile-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core domain logic for skillfile: models, parser, lock, conflict, patch"
publish = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
