[package]
name = "skillfile-deploy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform adapters and installation for skillfile"

[dependencies]
skillfile-core = { workspace = true }
skillfile-sources = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
