[package]
name = "skillfile-deploy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform adapters and installation for skillfile"
publish = true
exclude = ["tests/"]

[dependencies]
skillfile-core = { workspace = true }
skillfile-sources = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
